--- a/Source/WPF/MyMoney/Themes/Dark.xaml
+++ b/Source/WPF/MyMoney/Themes/Dark.xaml
@@ -18,6 +18,7 @@
 
     <Color x:Key="GridNormalBackgroundColor">#282828</Color>
     <Color x:Key="GridAlternateBackgroundColor">#1e1e1e</Color>
+    <Color x:Key="ToolbarIconColor">#99FFFFFF</Color>
 
     <!-- MessageBox border -->
     <SolidColorBrush x:Key="MessageBoxBorder" Color="{m:DynamicColor SystemAccentColor}"/>
@@ -48,7 +49,7 @@
     <SolidColorBrush x:Key="NegativeCurrencyForegroundBrush" Color="Firebrick"/>
 
     <!-- The following are used in toolbar icons -->
-    <SolidColorBrush x:Key="ToolbarIconBrush" Color="#99FFFFFF"/>
+    <SolidColorBrush x:Key="ToolbarIconBrush" Color="{StaticResource ToolbarIconColor}"/>
 
     <!-- for hyperlinks in reports -->
     <SolidColorBrush x:Key="HyperlinkForeground" Color="#00A7FF"/>
